# Iceberg

./: .gitignore  ICEBERG_INDEX.md  README.md  claude.md  pyproject.toml  setup.py
docs/: SCORES_2.0_PLAN.md
src/iceberg/: __init__.py  __main__.py  app.py  app.tcss  config.py
src/iceberg/analysis/: __init__.py  backtest.py  diagnose.py  indicators.py  models.py  scoring.py
src/iceberg/api/: __init__.py  finnhub.py
src/iceberg/data/: __init__.py  db.py  loader.py  models.py
src/iceberg/utils/: __init__.py  formatting.py
src/iceberg/widgets/: __init__.py  chart.py  holdings_dialog.py  market_indices.py  portfolio_summary.py  scores_panel.py  status_bar.py  technical_panel.py  ticker_banner.py  watchlist.py
